--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -1,5 +1,5 @@
 name: clipnote
-description: "A new Flutter project."
+description: "AI-powered meeting transcription and summarization."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -32,7 +32,20 @@ dependencies:
     sdk: flutter
   dio: ^5.7.0
   file_picker: ^8.0.0
+  permission_handler: ^11.3.1
+  image_picker: ^1.1.2   # or camera: ^0.10.x if you prefer full manual camera
 
+  # State Management
+  provider: ^6.1.1
+  
+  # Local Storage
+  shared_preferences: ^2.2.2
+  # In-App Purchases
+  in_app_purchase: ^3.1.11
+  
+  # UI Components
+  flutter_spinkit: ^5.2.0
+  lottie: ^2.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,9 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/animations/
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
