--- a/clipnote/android/app/src/main/AndroidManifest.xml
+++ b/clipnote/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Network for uploads/API -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- Camera + Mic for video capture -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+    <!-- Read media the user selects (scoped storage, Android 13+) -->
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
+
+    <!-- Back-compat for Android 12 and lower -->
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"/>
+
+    <!-- WRITE_EXTERNAL_STORAGE is deprecated; avoid unless you must write to
+        legacy external storage on very old devices. Uncomment only if needed. -->
+    <!--
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28"/>
+    -->
+
+    <!-- Declare camera hardware as optional so app installs on camera-less devices -->
+    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
+
     <application
         android:label="clipnote"
         android:name="${applicationName}"
