--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  record: ^5.1.2
+  path_provider: ^2.1.4
   flutter:
     sdk: flutter
   dio: ^5.7.0
