--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -37,6 +37,18 @@ dependencies:
   permission_handler: ^11.3.1
   image_picker: ^1.1.2   # or camera: ^0.10.x if you prefer full manual camera
 
+  # HTTP & API
+  http: ^1.1.0
+  dio: ^5.4.0
+  
+  # Audio Recording
+  record: ^5.0.4
+  path_provider: ^2.1.1
+  permission_handler: ^11.1.0
+  
+  # Audio Player (for playback)
+  audioplayers: ^5.2.1
+  
   # State Management
   provider: ^6.1.1
   
