--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2   # or camera: ^0.10.x if you prefer full manual camera
   shared_preferences: ^2.2.2
   in_app_purchase: ^3.2.2
+  device_info_plus: ^9.1.1
   # iOS simulator-only testing (safe to include; no-op on Android)
   in_app_purchase_storekit: ^0.3.6
   
