--- a/clipnote/android/.gitignore
+++ b/clipnote/android/.gitignore
@@ -6,6 +6,13 @@ gradle-wrapper.jar
 /local.properties
 GeneratedPluginRegistrant.java
 
+# Android/Flutter build outputs
+**/build/
+android/app/build/
+android/app/build/outputs/
+android/app/build/outputs/bundle/
+*.aab
+
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
 key.properties
