--- a/clipnote/android/app/build.gradle
+++ b/clipnote/android/app/build.gradle
@@ -1,40 +1,45 @@
 plugins {
-    id "com.android.application"
+    id "com.android.application"  // ✅ Fixed - was "com.forudgaming.clipnote"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
 android {
-    namespace = "com.example.clipnote"
-    compileSdk = flutter.compileSdkVersion
+    namespace = "com.fourdgaming.clipnote"
+    compileSdk = 36
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.clipnote"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
+        applicationId = "com.fourdgaming.clipnote"
+        minSdkVersion = flutter.minSdkVersion
+        targetSdkVersion = 36  // ✅ Fixed - was "targetSdk"
+        versionCode = flutter.versionCode.toInteger()
         versionName = flutter.versionName
+    }
+
+    signingConfigs {
+        release {
+            storeFile file("upload-keystore.jks")
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: "temp-password"
+            keyAlias "upload"
+            keyPassword System.getenv("KEY_PASSWORD") ?: "temp-password"
+        }
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
+            minifyEnabled = true
+            shrinkResources = true
         }
     }
 }
