--- a/clipnote/android/gradle.properties
+++ b/clipnote/android/gradle.properties
@@ -1,3 +1,16 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Timeout settings
+org.gradle.workers.max=4
+
+# Point to Android Studio's JDK 17
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+
+# Android settings
+android.useAndroidX=true
+android.enableJetifier=true
+
+# Kotlin
+kotlin.code.style=official
