--- a/clipnote/android/app/src/main/AndroidManifest.xml
+++ b/clipnote/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     <!-- Network for uploads/API -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+
     <!-- Camera + Mic for video capture -->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
