--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.2.2
   in_app_purchase: ^3.2.2
   device_info_plus: ^12.1.0
+  sqflite: ^2.3.0
+  open_filex: ^4.4.0
   # For opening email clients
   url_launcher: ^6.2.2
   
