--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,12 @@ SQLAlchemy>=2.0
 requests>=2.31.0
 google-auth>=2.23.0
 google-api-python-client>=2.100.0
+google-auth-httplib2>=0.1.0
+google-auth-oauthlib>=1.0.0
 packageing>=21.0
+setuptools>=68.0.0
+python-dotenv>=1.0.0
+device-info>=0.1.0
+pydantic-settings>=2.0.0
+certifi>=2023.0.0
+python-dateutil>=2.8.0
