Fix typo: packageing -> packaging

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ google-auth>=2.23.0
 google-api-python-client>=2.100.0
 google-auth-httplib2>=0.1.0
 google-auth-oauthlib>=1.0.0
-packageing>=21.0
+packaging>=21.0
 setuptools>=68.0.0
 python-dotenv>=1.0.0
 device-info>=0.1.0
