--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -43,10 +43,12 @@ dependencies:
   open_filex: ^4.4.0
   # For opening email clients
   url_launcher: ^6.2.2
-  webview_flutter: ^4.x
+  webview_flutter: ^4.10.5
   # For PDF generation
   pdf: ^3.10.7
-
+  pdfx: ^2.6.0
+  csv: ^5.0.2
+  path: ^1.9.0
   # For sharing content to other apps
   share_plus: ^12.0.1
 
