--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   open_filex: ^4.4.0
   # For opening email clients
   url_launcher: ^6.2.2
+  http: ^1.1.0
   webview_flutter: ^4.10.5
   # For PDF generation
   pdf: ^3.10.7
@@ -94,6 +95,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    # Add your banner images
+     - assets/banners/banner1.png
+     - assets/banners/banner2.png
+     - assets/banners/banner3.png
      - assets/animations/
      - assets/images/
 
