Added dynamic ad banners

--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -99,6 +99,9 @@ flutter:
      - assets/banners/banner1.png
      - assets/banners/banner2.png
      - assets/banners/banner3.png
+     - assets/banners/banner4.png
+     - assets/banners/banner5.png
+     - assets/banners/banner6.png
      - assets/animations/
      - assets/images/
 
