--- a/clipnote/pubspec.yaml
+++ b/clipnote/pubspec.yaml
@@ -76,12 +76,14 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 flutter_launcher_icons:
-  android: true
+  android: "assets/icon/app_icon.png"  # Use full icon with gradient
   ios: true
   image_path: "assets/icon/app_icon.png"
+  remove_alpha_ios: true
+  # Remove adaptive icon settings
   # adaptive_icon_background: "#8B9FEE"  # Your icon's background color
   # adaptive_icon_foreground: "assets/icon/foreground.png"
-  remove_alpha_ios: true  
+ 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
