--- a/clipnote/android/app/src/main/AndroidManifest.xml
+++ b/clipnote/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
     <application
         android:label="clipnote"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher">  <!-- Change from ic_launcher_round -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
