--- a/clipnote/android/gradle.properties
+++ b/clipnote/android/gradle.properties
@@ -6,7 +6,7 @@ android.enableJetifier=true
 org.gradle.workers.max=4
 
 # Point to Android Studio's JDK 17
-org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio1\\jbr
 
 # Android settings
 android.useAndroidX=true
