--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
-  "name": "4dgaming-portfolio",
+  "name": "4d-gaming-stripe-backend",
   "version": "1.0.0",
+  "description": "Stripe payment backend for 4D Gaming portfolio",
+  "main": "server.js",
   "scripts": {
-    "start": "npx serve -s . -l 3000"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "stripe",
+    "payment",
+    "backend",
+    "portfolio"
+  ],
+  "author": "4D Gaming",
+  "license": "MIT",
   "dependencies": {
-    "serve": "^14.2.0"
+    "express": "^4.18.2",
+    "stripe": "^13.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
