--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.30.6
 sqlmodel==0.0.21
 pydantic==2.9.2
 python-multipart==0.0.9
+python-jose[cryptography]
 jinja2==3.1.4
 httpx==0.27.2
 psycopg[binary]==3.2.1
@@ -10,6 +11,7 @@ openai==1.46.0
 PyJWT==2.9.0
 email-validator==2.2.0
 alembic
+passlib[bcrypt]
 boto3
 botocore
 SQLAlchemy>=2.0
